test/data/syntax-errors/invalid-list.jen
listExample := [3, 5, 2, ]
